fix: horizontal scroll bar

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,12 @@
-@tailwind base;
+  @tailwind base;
   @tailwind components;
   @tailwind utilities;
+
+  html,
+  body {
+    overflow-x: hidden;
+  }
+
 
   @layer base {
     :root {
@@ -70,6 +76,7 @@
     * {
       @apply border-border;
     }
+
     body {
       @apply bg-background text-foreground;
     }
